# customer-insight

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SUPPORT.md  app.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: chinese_stopwords.txt
src/: data_processor.py  text_analyzer.py  visualizer.py
src/utils/: __init__.py  jieba_config.py  text_cleaning.py
tests/: conftest.py  test_data_processor.py  test_text_cleaning.py
utils/: jieba_config.py  text_cleaning.py
