[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "customer-insight"
version = "2.0.0"
description = "AI-powered customer review analysis platform with sentiment analysis, keyword extraction, topic modeling, and anomaly detection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Chan Meng", email = "chanmeng666@gmail.com"}
]
keywords = ["nlp", "sentiment-analysis", "customer-reviews", "streamlit", "text-mining"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "streamlit>=1.2.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "plotly>=5.3.0",
    "transformers>=4.15.0",
    "torch>=1.9.0",
    "nltk>=3.6.0",
    "jieba>=0.42.1",
    "tqdm>=4.65.0",
    "html5lib>=1.1",
    "scikit-learn>=0.24.0",
    "wordcloud>=1.8.1",
    "matplotlib>=3.4.0",
    "sentence-transformers>=2.2.0",
    "networkx>=2.6.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ChanMeng666/customer-insight"
Documentation = "https://github.com/ChanMeng666/customer-insight#readme"
Repository = "https://github.com/ChanMeng666/customer-insight"
Issues = "https://github.com/ChanMeng666/customer-insight/issues"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
